# AutoGradCpp

./: CMakeLists.txt  readme.md
autograd_lib/: CMakeLists.txt  Loss.hpp  Optimizer.hpp  Tensor.hpp  WeightMap.hpp  autograd.cpp
autograd_lib/GraphNode/: GraphNode.hpp
autograd_lib/Loss/: L2Loss.hpp
autograd_lib/Operator/: Operator.hpp
autograd_lib/Tensor/: Matrix.hpp  Tensor.hpp
test/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp
